package fr.schmidt.poolapi.model.enums;

public enum InOut {
ENTRY, EXIT
}
